--- a/src/valenvibrate/VVibrate.css
+++ b/src/valenvibrate/VVibrate.css
@@ -22,6 +22,7 @@ body{
     padding-top: 40px;
     gap: 30px;
     
+    
 }
 
 .yesbtn{
@@ -54,3 +55,99 @@ transition: .3s ease-in-out;
 background-color: red;
 color: white;
 }
+
+.love{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1; 
+}
+
+.love img{
+margin-top: 59px;
+    margin-left: 496px ;
+}
+
+.skull{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1; 
+    
+}
+
+.skull img{
+    
+margin-left: 316px ;
+
+}
+
+.nomessback{
+    background-color: black;
+    }
+    .nomessback p{
+    color: green;
+    font-weight: 1000;
+   
+}
+
+@media (max-width: 900px) {
+
+    .skull img{
+    
+        margin-left: 80px ;
+        
+        }
+
+        .love img{
+            margin-top: 250px;
+                margin-left: 330px ;
+            }
+}
+
+@media (max-width: 700px) {
+
+    .skull img{
+    
+        margin-left: -90px ;
+        
+        }
+
+        .love img{
+            margin-top: 150px;
+                margin-left: 150px ;
+            }
+}
+
+
+@media (max-width: 400px) {
+    .skull img{
+    
+        margin-left: -110px ;
+        
+        }
+
+
+        .love img{
+            margin-top: 120px;
+                margin-left: 130px ;
+            }
+
+}
+
+
+
+@media (max-width: 350px) {
+
+    .skull img{
+    
+        margin-left: -140px ;
+        
+        }
+
+        .love img{
+            margin-top: 40px;
+                margin-left: 100px ;
+            }
+          
+        }
